crates/math-core/tests/snapshots/error_test__unsupported_not.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\not\\text{hello}"
---
Error: Expected a relation after \not.
   ╭─[ <input>:1:5 ]
   │
 1 │ \not\text{hello}
   │     ──┬──  
   │       ╰──── expected a relation
───╯
